--- a/system1-gateway/pom.xml
+++ b/system1-gateway/pom.xml
@@ -71,6 +71,7 @@
     </dependencies>
 
     <build>
+        <finalName>SYSTEM 1</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
