--- a/system2-corebank/Dockerfile
+++ b/system2-corebank/Dockerfile
@@ -1,36 +1,34 @@
-# Use an official OpenJDK runtime as a parent image
-FROM eclipse-temurin:17-jdk-jammy as builder
+# Use a two-stage build to create a smaller final image
+# Stage 1: Build the application
+FROM maven:3.8.5-openjdk-17 AS builder
 
 # Set the working directory
 WORKDIR /app
 
-# Copy the Maven wrapper and the pom.xml
+# Copy the Maven wrapper and pom.xml
 COPY .mvn/ .mvn
 COPY mvnw pom.xml ./
 
-# Make the Maven wrapper executable
-RUN chmod +x ./mvnw
-
-# Download the dependencies
+# Download dependencies
 RUN ./mvnw dependency:go-offline
 
-# Copy the project source
+# Copy the rest of the source code
 COPY src ./src
 
-# Package the application
+# Build the application
 RUN ./mvnw package -DskipTests
 
-# Create a new image for the deployment
-FROM eclipse-temurin:17-jre-jammy
+# Stage 2: Create the final image
+FROM openjdk:17-jre-slim
 
 # Set the working directory
 WORKDIR /app
 
-# Copy the jar from the builder
+# Copy the JAR from the builder stage
 COPY --from=builder /app/target/*.jar app.jar
 
-# Make port 8080 available to the world outside this container
+# Expose the application port
 EXPOSE 8080
 
-# Run the jar file 
-ENTRYPOINT ["java","-jar","app.jar"]
+# Run the application
+ENTRYPOINT ["java", "-jar", "app.jar"]
